fixed cards not wrapping properly on mobile mosaics

--- a/website/private/components/MosaicLarge.module.css
+++ b/website/private/components/MosaicLarge.module.css
@@ -1,6 +1,7 @@
 .MosaicLarge {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(12.5em, 1fr));
+  grid-auto-columns: 0;
   grid-gap: 1em;
   /*https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout*/
   grid-auto-flow: dense;
