--- a/website/private/components/MosaicSmall.module.css
+++ b/website/private/components/MosaicSmall.module.css
@@ -1,6 +1,7 @@
 .MosaicSmall {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25em, 1fr));
+  grid-auto-columns: 0;
   grid-gap: 1em;
   /*https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout*/
   grid-auto-flow: dense;
@@ -8,6 +9,7 @@
 .MosaicSmall > div {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(12.5em, 1fr));
+  grid-auto-columns: 0;
   grid-template-rows: auto auto;
   grid-gap: 1em;
   /*https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout*/
